[package]
name = "hal_project"
version = "0.1.0"
edition = "2021"

[dependencies]
avr-device = { version = "0.4.0", optional = true, default-features = false }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[features]
atmega328p = ["avr-device/atmega328p", "avr-device"]
cortex_m3 = ["cortex-m", "cortex-m-rt"]

[profile.dev]
panic = "abort"           

[profile.release]
panic = "abort"           




